--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -69,14 +69,14 @@
 <section id="intro" >
 	<div class="container">
 		<div class="row">
-				<div class="col-lg-12 text-center">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 					<h2 class="section-heading">為什麼使用NCTU+ ?<br><br></h2>					
 				</div>
 		</div>
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-3 col-md-6 text-center gray-hover">
+			<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center gray-hover">
 				<div class="service-box">					
 						<%=image_tag "1.png",class:"width-200"%>
 						<h3>全校課程心得</h3>
@@ -85,7 +85,7 @@
 						</p>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-6 text-center gray-hover">
+			<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center gray-hover">
 				<div class="service-box">
 					<%=image_tag "2.png",class:"width-200"%>
 					<h3>二手書拍賣</h3>
@@ -95,7 +95,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-6 text-center gray-hover">
+			<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center gray-hover">
 				<div class="service-box">
 					<%=image_tag "3.png",class:"width-200"%>
 					<h3>畢業學分計算</h3>
@@ -103,7 +103,7 @@
 					<p class="text-muted">今年可以畢業嗎？令人苦惱的畢業學分計算一次完成，把握大學最後的時間！</p>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-6 text-center gray-hover">
+			<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center gray-hover">
 				<div class="service-box">
 					<%=image_tag "4.png",class:"width-200"%>
 					<h3>課表分享功能</h3>
@@ -122,8 +122,8 @@
 		<div class="row">
 			<div class="col-lg-12 col-sm-12 text-center" >
 				<h2>About NCTU+ </h2>
-				<%=image_tag "logo22.png",class: "col-lg-4 col-sm-4",style: "text-align:center;width:320px;margin-bottom:20px;" %>											
-				<p class="col-lg-8 col-sm-3" style="text-align:left;"> 
+				<%=image_tag "logo22.png",class: "col-lg-4 col-md-5 col-sm-6",style: "text-align:center;width:320px;margin-bottom:20px;" %>											
+				<p class="col-lg-8 col-md-7 col-sm-6" style="text-align:left;"> 
 				NCTU+是一個交大非官方的資訊組織，有鑑於目前校園系統仍有許多改善空間，我們從改寫校園系統開始，擴展出許多更便利、更友善且更美觀的服務。<br>
 				我們一方面向校方請求開放Data及API，另一方面聆聽同學們的需求並不斷發想新的點子，我們不僅純粹的coding，我們希望結合行銷、設計、工程等不同領域的人才，不斷地進步使平台變的更好。
 				</p>
