--- a/app/views/course_maps/show.html.erb
+++ b/app/views/course_maps/show.html.erb
@@ -1,84 +1,246 @@
-<%= javascript_include_tag "course_maps/manage", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "course_maps/public", "data-turbolinks-track" => true %>
 
-<h3>課程地圖 - <%=@course_map.name%></h3>  
+	<div id="central-view" class="containe">
+		<%=form_tag "/course_maps",method:"GET" do %>
+			<div class="row" id="">
+				<div class="col-md-12 text-center">
+					<!--
+					<div style="width:108px;display:inline-block;">	
+						<%=select_tag "college", options_for_select(@college_sel),prompt: "學院",class:"form-control" %>
+					</div>
+					-->
+					<div style="width:200px;display:inline-block;">	
+						<%=select_tag "dept_id", options_for_select(@dept_sel,params[:dept_id]),prompt: "系所",class:"form-control",required:"true" %>
+					</div>
+					<div style="width:120px;display:inline-block;">
+						<%=select_tag "year", options_for_select(@year_sel,params[:year]),prompt: "入學年度",class:"form-control",required:"true" %>
+					</div>	
+					<%=submit_tag "送出",class:"btn btn-success"%>
+				</div>	
+			</div>
+		<% end %>
+		
+		
+		<div class="col-md-10 col-md-offset-1 panel panel-default">
+			<div class="panel-body" id="cm-desc" style="margin-left:5.4%;margin-right:2.4%;">			
+				
+			</div>
+			<div id="QandA" style="">
+				<h3><strong>問題回報區</strong></h3>
+				<hr>
+				<div id="fb-root"></div>
+			</div>
+		</div>
+	</div>
+	<div class="tooltip-course">
+		<div class="course-name">Course Name</div>
+		<dic class="course-content"></div>
+	</div>
 
-<div class="well">
-<h3>課程介紹 <small><%=link_to '編輯', 'javascript:void(0);', :class=>'cm-edit-head'%></small></h3>
-<table class="table table-bordered">
-	<tr>
-		<td>適用系所：</td>
-		<td class='cm-head-dep'><%=(@course_map.department_id==0)? "不指定" : @course_map.department_ch_name%></td>
-		<td>適用學期：</td>
-		<td class='cm-head-year'><%=(@course_map.year==0)? "不指定" : @course_map.year%></td>
-		<td>應修學分：</td>
-		<td class='cm-head-grade'><%=@course_map.total_credit%></td>
-	<tr>
-	<tr>
-		<td colspan="6"><p>說明：</p>
-			<p class='cm-head-desc'><%=@course_map.desc%></p>
-		</td>
-	</tr>	
-</table>
+	<ol id="joyRideTipContent">
+		<li data-text="Next" class="">
+			<h2>Tips</h2>
+			<p>
+			請使用Enter鍵或滑鼠點擊灰色處觀看	
+			</p>
+		</li>
+		
+		<li data-id="rules" data-button="Next" data-options="tipLocation:right">
+			<h2>修課規定</h2>
+			<p>至少需修0學分通常為該領域的其他選修即可滿足該領域的條件，若非上述情形則請回報</p>			
+		</li>
 
-<hr>
-<h3>課程內容</h3>
-<div id="course-map-content"></div>
-</div>
+		<li data-text="Next" class="">
+			<h2>We need help!</h2>
+			<p>
+			此頁面是由團隊成員將學校的<a href="http://aadm.nctu.edu.tw/chcourse/class03.aspx?ftype=3">必修科目表</a>手動輸入至系統，若有錯誤請至下方Q&A區回報，我們將會儘快處理<br>
+			我們正與一些系洽談中，之後希望由系助理來協助輸入，若同學願意擔任該系管理員請至粉專私訊 :)<br>
+			目前可以幫同學計算列表上的必修/必選修等課程，但<strong>系外選修</strong>、<strong>任選理工科目</strong>、<strong>英文授課</strong>等較特殊的規則目前無法計算<br>			
+			</p>
+		</li>
+		
+  </ol>
 
 <script>
-var map_id = <%=j @course_map.id.to_s %> ;
-var cm_head_info = { dep: $('.cm-head-dep').text(), year: $('.cm-head-year').text(), desc:$('.cm-head-desc').text() };
-
-$(document).ready(function(){
-	$('#course-map-content').load('/course_maps/content?map_id='+map_id);
+	(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.3&appId=<%=Facebook::APP_ID%>";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
 	
-	$('.cm-edit-head').click(function(){
-		if($(this).html()=='編輯'){
-			$('.cm-head-dep').html('<%=j select_tag :dep, options_from_collection_for_select(Department.majorable.order("degree DESC"),"id","ch_name"), :prompt=>"不指定"  %>');
-			$('.cm-head-year').html('<%=j select_tag :year, options_for_select(Semester::YEARS.map{ |y| [y, y] }), :prompt=>"不指定" %>');
-			$('.cm-head-grade').html('<%=j text_field_tag :grade, @course_map.total_credit%>');
-			$("#dep option").each(function() {
-  				if($(this).text() == cm_head_info['dep']) {
-    				$(this).attr('selected', 'selected');            
-  				}                        
-			});
-			$("#year option:contains(" + cm_head_info['year'] + ")").attr('selected', 'selected');
-			$('.cm-head-desc').html('<%=j text_area_tag "desc", '', {class:"form-control"}%>');
-			$('#desc').html(cm_head_info['desc']);
-			$(this).html('<%=fa_icon "check",:class=>"btn btn-circle btn-success" %>');
-		}else{//post 
-			var dep = ($('#dep').val()) ? $('#dep').val() : 0 ;
-			var year = ($('#year').val()) ? $('#year').val() : 0 ;		
-			var grade = ($('#grade').val()) ? $('#grade').val() : 0 ;	
-			cm_head_info['dep'] = $('#dep option:selected').text() ;
-			cm_head_info['year'] = $('#year option:selected').text() ;
-			cm_head_info['desc'] = $('#desc').val() ;
-			$.ajax({
-				//async: false ,
-				type: "POST",
-				url: "update_cm_head" ,
-				data:{
-					map_id: map_id,
-					dep: dep,
-					year: year,
-					grade: grade,
-					desc: $('#desc').val()
-				},	
-				success: function(data){			
-					$('.cm-head-dep').html(cm_head_info['dep']);
-					$('.cm-head-year').html(cm_head_info['year']);
-					$('.cm-head-grade').html(grade);
-					$('.cm-head-desc').html(cm_head_info['desc'] );			
-				},	
-				error: function(){
-					alert('internal server error.. please reload');
-				}
-			});
-			$(this).html('編輯');
-			
+	$(document).ready(function(){
+		initFbComment(<%=params[:id]%>);
+		//$('#fb-root').html('<div class="fb-comments" data-href="" data-numposts="5" width="100%" data-colorscheme="light"></div>');
+		//$('.fb-comments').attr('data-href',"http://plus.nctu.edu.tw:4000/course_maps/5");
+		var dept_id=<%=@dept_id%>;
+		var year=<%=@year%>;
+		if(dept_id!=0){
+		
+			$("#dept-"+dept_id).parent().parent().prev().click();		
+			$("#dept-"+dept_id).addClass("selected");
+			if(year!=0){
+				loadCm(dept_id,year);
+				
+					
+			}
 		}
+	
 	});
 
-});
-
 </script>
+
+<%= render "/course_maps/public/xtmpl_course_table" %>
+<style>
+	.tooltip-course
+	{
+		background:#fff;
+		border:1px #ccc solid;
+		border-radius:6px;
+		position:absolute;
+		//left:300px;
+		//top:300px;
+		width:auto;
+		height:auto;
+		padding-bottom:5px;
+		display:none;
+		z-index:1000;
+		
+		-webkit-box-shadow: 3px 3px 20px -3px rgba(0,0,0,0.75);
+		-moz-box-shadow: 3px 3px 20px -3px rgba(0,0,0,0.75);
+		box-shadow: 3px 3px 20px -3px rgba(0,0,0,0.75);
+	}
+	.course-name
+	{
+		overflow:hidden;
+		background:#aaa;
+		
+		color:white;
+		padding:5px 5px;
+	}
+	.course-content
+	{
+		
+		color:#555;
+		padding:5px 5px;
+		overflow:hidden;
+		display:block;
+		
+	}
+	.widget-course
+	{
+		height:80px;
+		width:160px;
+		margin-bottom:20px;
+		
+		float:right;
+		display:block;
+	}
+	
+	.square-course
+	{
+		width:12px;
+		height:12px;
+		background:#666;
+		display:inline-block;
+		margin-left:15px;
+		margin-top:10px;
+		line-height:20px;
+	}
+	.widget-line
+	{
+		line-height:20px;
+	}
+	.lead_course {
+		border-bottom: 3px solid #ddd;
+		-moz-box-shadow:    inset 0 0 10px #000000;
+	  -webkit-box-shadow: inset 0 0 10px #000000;
+	  box-shadow:         inset 0 0 10px #000000;
+	}
+	.grade1
+	{
+		background:#333;
+		color:white;
+		
+	}
+	.grade2
+	{
+		border-left: 5px solid #fff;
+	}
+	.semester1
+	{
+		background:#ccc
+	}
+	.semester2
+	{
+		background:#ccc;
+		border-left: 2px solid #fff;
+	}
+	.btn-course
+	{
+		padding:4px 8px;
+		margin:10px 0px;
+		color:#fff;
+		border-radius:4px;
+		font-size:12px;
+		text-align:center;
+		min-height:42px;
+		background:#0080FF;
+	}
+	.btn-course:hover
+	{
+		opacity:0.8;
+	}
+	#btn-course-required
+	{
+		background:#0080FF;
+	}
+	#btn-course-minor
+	{
+		background:#FF8040;
+	}
+	#btn-course-main
+	{
+		background:#FF0080;
+	}
+	
+	#table-gray-line
+	{
+		border-left:1px #aaa solid;
+	}
+	#table-not-limit
+	{
+		height:0px;
+		background:#ccc;
+	}
+
+	.btn-course:hover
+	{
+		opacity:0.8;
+	}
+	#btn-course-required
+	{
+		background:#0080FF;
+	}
+	#btn-course-minor
+	{
+		background:#FF8040;
+	}
+	#btn-course-main
+	{
+		background:#FF0080;
+	}
+	
+	#table-gray-line
+	{
+		border-left:1px #aaa solid;
+	}
+	#table-not-limit
+	{
+		height:0px;
+		background:#ccc;
+	}
+	/*html, body{height:100%;}*/
+
+</style>
