--- a/app/views/user/course_stat/_xtmpl_cm_check.html.erb
+++ b/app/views/user/course_stat/_xtmpl_cm_check.html.erb
@@ -31,7 +31,7 @@
 	<tr class="row" >
 		<td class="col-md-12" colspan="{%=cm.max_colspan+1%}">
 			<h4 class="text-center">
-				<a href="/course_maps?dept_id={%=cm.dept_id%}&year={%=cm.year%}" data-no-turbolink>
+				<a href="/course_maps/{%=cm.id%}" data-no-turbolink>
 				{%=cm.name %} 
 				</a>
 				<% if @show_report %>
