--- a/app/views/course_maps/show.html.erb
+++ b/app/views/course_maps/show.html.erb
@@ -38,23 +38,26 @@
 	</div>
 
 	<ol id="joyRideTipContent">
-		<li data-text="Next" class="">
+		<!--<li data-text="Next" class="">
 			<h2>Tips</h2>
 			<p>
 			請使用Enter鍵或滑鼠點擊灰色處觀看	
 			</p>
+		</li>-->
+		<li data-id="cf-title" data-button="Next" data-options="tipLocation:right">
+			<h2>學程分類</h2>
+			<p>點擊以收起/展開課程</p>			
 		</li>
-		
 		<li data-id="rules" data-button="Next" data-options="tipLocation:right">
 			<h2>修課規定</h2>
 			<p>至少需修0學分通常為該領域的其他選修即可滿足該領域的條件，若非上述情形則請回報</p>			
 		</li>
 
-		<li data-text="Next" class="">
+		<li data-id="QandA" data-text="Next" data-options="tipLocation:top">
 			<h2>We need help!</h2>
 			<p>
-			此頁面是由團隊成員將學校的<a href="http://aadm.nctu.edu.tw/chcourse/class03.aspx?ftype=3">必修科目表</a>手動輸入至系統，若有錯誤請至下方Q&A區回報，我們將會儘快處理<br>
-			我們正與一些系洽談中，之後希望由系助理來協助輸入，若同學願意擔任該系管理員請至粉專私訊 :)<br>
+			此頁面是由團隊成員將學校的<a href="http://aadm.nctu.edu.tw/chcourse/class03.aspx?ftype=3">必修科目表</a>手動輸入至系統，若有錯誤可以在此回報，我們將會儘快處理<br>
+			我們正與一些系洽談中，之後希望由系助理來協助輸入，目前若同學願意擔任該系管理員請至粉專私訊 :)<br>
 			目前可以幫同學計算列表上的必修/必選修等課程，但<strong>系外選修</strong>、<strong>任選理工科目</strong>、<strong>英文授課</strong>等較特殊的規則目前無法計算<br>			
 			</p>
 		</li>
