fix header index turbolink

--- a/app/assets/stylesheets/new-index.css.erb
+++ b/app/assets/stylesheets/new-index.css.erb
@@ -612,7 +612,7 @@ th
 	text-align:center;
 }
 
-@import url("http://fonts.googleapis.com/css?family=Lato");
+@import url("https://fonts.googleapis.com/css?family=Lato");
 * {
   margin: 0;
   padding: 0;
