--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand page-scroll" href="/">
+			<a class="navbar-brand page-scroll" href="/" data-no-turbolink>
 				NCTU+
 			</a>
 		</div>
