--- a/app/views/course_maps/edit.html.erb
+++ b/app/views/course_maps/edit.html.erb
@@ -56,7 +56,7 @@ $(document).ready(function(){
 			$.ajax({
 				//async: false ,
 				type: "POST",
-				url: "update_cm_head" ,
+				url: "/course_maps/update_cm_head" ,
 				data:{
 					map_id: map_id,
 					dep: dep,
