--- a/app/views/courses/search/_cm_results_mini.html.erb
+++ b/app/views/courses/search/_cm_results_mini.html.erb
@@ -38,7 +38,7 @@ function add_all_class(){
 				
 				<div class="col-sm-8 no-padding-left ">
 					<div id="text_div" class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
-					<%= f.search_field :ch_name_cont, class: "form-control",placeholder:"課名" %>
+					<%= f.search_field :course_ch_name_cont, class: "form-control",placeholder:"課名" %>
 				</div>
 				<div class="col-sm-3 no-padding-left" style="">
 					<button class="btn btn-primary" onclick="search_by_text();"><%=fa_icon "search"%></button>
