--- a/app/views/courses/search/course_map.html.erb
+++ b/app/views/courses/search/course_map.html.erb
@@ -64,7 +64,7 @@ function add_class(c_ids){ //action="add"
   				if(res.fail > 0 )
   					alert("有 "+res.fail+" 課程重複了");
   				console.log(cg_show_id);	
-  				load_group_treeview(cg_show_id);
+  				load_group_treeview(cg_show_id, map_id);
   				$('#alert-msg').html('新增成功').show().fadeOut(3000);
   			},
   			error: function(){
