use bootstrap-sass

--- a/app/assets/javascripts/books.js.erb
+++ b/app/assets/javascripts/books.js.erb
@@ -112,7 +112,7 @@ function selectBook(title,isbn,authors,image_link,description,preview_link){
 	$("#book_selected").val("true");
 	fillBookInput(title,isbn,authors,image_link,description,preview_link);
 	toastr["success"]("已選擇 "+title+" (From Google Book)")
-	closeGlobalModal();
+	$("#book-modal").modal('hide');
 }
 
 function searchCourse(){
@@ -127,7 +127,7 @@ function searchCourse(){
 		$("#last-ct-search-term").text($("#search-ct").val());
 	}
 	else{
-		justShowGlobalModal();
+		$("#book-modal").modal('show');
 	}
 }
 function fillCtIdList(){
@@ -163,7 +163,8 @@ function searchGoogleBook(){
 		success : function(data) {
 			console.log(data);
 			var content=tmpl("googlebook-res",data);
-			showGlobalModal(title, content);
+			showModal("book-modal",1,title, content);
+			
 		}
 	});
 	
@@ -178,5 +179,5 @@ function showIsbnTip(){
 	tips+="在書籍的條碼區就可以找到囉，如圖</h4>";
 	tips+='<%=image_tag asset_path("ISBN.jpg"),size:"300x200"%>';
 	//tips+='<img alt="Isbn" height="200" src="/assets/ISBN.jpg" width="300">';
-	showGlobalModal("ISBN",tips);
+	showGlobalModal(1,"ISBN",tips);
 }
