--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -129,6 +129,17 @@
 	<%=f.submit%>
 <% end %>
 
+<div class="modal fade" id="book-modal" tabindex="-1" role="dialog" aria-hidden="true" >
+	<div class="modal-dialog" >
+		<div class="modal-content" >
+			<div class="modal-header" >
+				<h4 class="modal-title"></h4>
+			</div>
+			<div class="modal-body" ></div>
+		</div>
+	</div>
+</div>
+
 <script type="text/x-tmpl" id="cts-res">
 	<table class="table table-hover" id="cts-res-table">
 		<tr class="">
