--- a/app/views/books/cts_search.js.erb
+++ b/app/views/books/cts_search.js.erb
@@ -1,3 +1,3 @@
-showGlobalModal('選擇適用課程及老師',tmpl("cts-res",<%=@res.to_json.html_safe%>));
+showModal("book-modal",1,'選擇適用課程及老師',tmpl("cts-res",<%=@res.to_json.html_safe%>));
 
 
