--- a/app/views/user/statistics.html.erb
+++ b/app/views/user/statistics.html.erb
@@ -8,8 +8,8 @@
 	</div>
 	</br>
 	
-	<div id="common_check_div" class="container"></div>
-	<div id="cosmap_check_div" class="container"></div>
+	<div id="common_check_div" class="col-md-12"></div>
+	<div id="cosmap_check_div" class="col-md-12"></div>
 	<div id="course_list" class=""><div class="text-center"><%=fa_icon "refresh spin 2x"%></div></div>
 </div>
 
