--- a/app/views/past_exams/_xtmpl_upload.html.erb
+++ b/app/views/past_exams/_xtmpl_upload.html.erb
@@ -3,8 +3,8 @@
   {% for (var i=0, file; file=o.files[i]; i++) { %}
 		<tr class="template-upload fade" > 
 			<input type="hidden" class="upload_ct_id" name="past_exam[course_teachership_id]" value="<%=@ct_id%>">
-			<td>0</td>
-			<td class="semester">
+			<td class="text-center">0</td>
+			<td class="semester text-center">
 				<span>
 					<%=select_tag "past_exam[semester_id]", options_from_collection_for_select(@sems, "id", "name"), :onchange=>"update_input($(this));" %>
 					<input id="new_semester_id" type="hidden" name="past_exam[semester_id]" value="<%=@sems.first.id %>">
@@ -13,14 +13,14 @@
 			<td class="col-md-2 description">
 				<input name="past_exam[description]" rows="1" style="width:200px;">
 			</td>
-			<td class="filename">
+			<td class="filename text-center">
 				{%=file.name%}
 			</td>
-			<td class="size">
+			<td class="size text-center">
 				<span>{%=o.formatFileSize(file.size)%}</span>
 			</td>
 			{% if (file.error) { %}
-				<td class="error" colspan="2">
+				<td class="error text-center" colspan="2">
 					<span class="label label-important">{%=locale.fileupload.error%}</span> 
 					{%=locale.fileupload.errors[file.error] || file.error%}
 				</td>
